<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Java_Week5_MultiActivites</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome">Welcome!</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_denied">DeniedActivity</string>
    <string name="login_denied">Login denied!</string>
    <string name="try_again">Try again</string>
    <string name="title_activity_confirm">Log out</string>
    <string name="log_out_confirm">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="go">Go</string>
    <string name="url">Url</string>
    <string name="search">Search</string>

</resources>
